# asm4-catalog

./: .gitignore  README.md
playbooks/: masscan_test.yaml  subdomains_enum.yaml  test_playbook simple.yaml  test_playbook.yaml  test_playbook_simple.yaml  web-sweep.yaml
profiles/: altdns-default.yaml  dns-altmutation-default.yaml  dns-bbot-passive.yaml  masscan-default.yaml  subdomain-synth-default.yaml
registry/: docker-compose.yml
rules/detection/: ssh_public.yaml
rules/promotion/: domains.yaml  network_services.yaml
rules/scope/: domains_prod.yaml  tenant_all_domains.yaml  tenant_all_ips.yaml  tenant_root_domains.yaml
schemas/events/: dns_domain@v1.json  network_service@v1.json
schemas/playbooks/: playbook.schema.json
tasks/: dns.altmutation.yaml  dns.passive.yaml  httpx.hostport_probes.yaml  masscan.scan.yaml
tools/: test_adapter.py
tools/adapter_runtime/: pyproject.toml
tools/adapter_runtime/src/asm_adapter_runtime/: base.py  envelope.py
tools/adapter_runtime/src/asm_adapter_runtime/models/: __init__.py  network.py
tools/adapters/masscan/: .dockerignore  Dockerfile  README.md
tools/bbot/: Dockerfile  adapter.py  manifest.yaml
tools/dns_altmutations/: manifest.yaml
tools/httpx/: Dockerfile  README.md  entrypoint.sh  manifest.yaml
tools/httpx/profiles/: default.yaml
tools/httpx/schemas/: http_title_v1.json
tools/runtime/: Dockerfile
tools/runtime/wrappers/: pyproject.toml
tools/runtime/wrappers/src/asm_tool_wrappers/: __init__.py  base_wrapper.py  masscan_wrapper.py
tools/subdomain-synth/: adapter.py  manifest.yaml
(+40 files in other folders)
